--- a/test1.html
+++ b/test1.html
@@ -37,6 +37,6 @@
         </div>
     </form>
     </section>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
